create database class

--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!-- projet initialisé avec silverbatch => https://www.silvercore.fr -->
+
+<!-- silvercore / silvertone, tous droits réservés -->
+
+<!-- lorem Ipsum -->
+
 <!doctype html>
-<html lang="en">
+
+<html lang="fr">
+
   <head>
+
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+
+
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+
+    <link rel="preload" as="image" href="/assets/webp/note-edit_plein.webp" />
+    <link rel="preload" as="image" href="/assets/webp/note-edit_vide.webp" />
+    <link rel="preload" as="image" href="/assets/webp/pin_plein.webp" />
+    <link rel="preload" as="image" href="/assets/webp/pin_vide.webp" />
+
   </head>
+
+
+  <!-- body managed by vue -->
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+
+
 </html>
