--- a/index.html
+++ b/index.html
@@ -10,8 +10,36 @@
 
   <head>
 
+    <!-- divers -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="hostname" content="app.silvernote.fr" />
+    <meta name="copyright" content="2025 | SilverCore - SilverNote" />
+    <meta name="author" content="SilverCore - SilverNote" />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="theme-color" content="#FFF8F0" />
+
+
+    <!-- meta SEO -->
+    <meta name="keywords" content="silvernote" />
+    <meta name="description" content=" SilverNote est une application simple de prise de notes, compatible avec les appareils mobiles, les ordinateurs et le web. " />
+    <meta name="language" content="fr" />
+    <meta name="geo.region" content="FR" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="rating" content="general" />
+    <meta name="format-detection" content="telephone=no" />
+
+
+    <!-- meta open graph -->
+    <meta property="og:title" content="" /> <!-- rempli par vue-router -->
+    <meta property="og:description" content=" SilverNote est une application simple de prise de notes, compatible avec les appareils mobiles, les ordinateurs et le web. " />
+    <meta property="og:image" content="https://app.silvernote.fr/favicon.png" />
+    <meta property="og:site_name" content="SilverNote" /> 
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://app.silvernote.fr/" /> 
 
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
@@ -25,10 +53,13 @@
   </head>
 
 
-  <!-- body managed by vue -->
+  <!-- body managed by vite/vue -->
+
   <body>
+
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+
   </body>
 
 
