--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="author" content="SilverCore - SilverNote" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="theme-color" content="#FFF8F0" />
+    <meta name="theme-color" content="#F28C28" />
 
 
     <!-- meta SEO -->
@@ -44,11 +44,14 @@
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-
+    <!-- preload -->
     <link rel="preload" as="image" href="/assets/webp/note-edit_plein.webp" />
     <link rel="preload" as="image" href="/assets/webp/note-edit_vide.webp" />
     <link rel="preload" as="image" href="/assets/webp/pin_plein.webp" />
     <link rel="preload" as="image" href="/assets/webp/pin_vide.webp" />
+
+    <link rel="preload" as="image" href="/assets/svgs/ellipsis.svg" />
+    <link rel="preload" as="image" href="/assets/svgs/copy.svg" />
 
   </head>
 
@@ -57,8 +60,13 @@
 
   <body>
 
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="app">
+      <!-- web app front -->
+    </div>
+
+    <script type="module" src="/src/main.ts">
+      
+    </script>
 
   </body>
 
