--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
     <link rel="preload" as="image" href="/assets/svgs/ellipsis.svg" />
     <link rel="preload" as="image" href="/assets/svgs/copy.svg" />
+    <link rel="preload" as="image" href="/assets/svgs/moon.svg" />
+    <link rel="preload" as="image" href="/assets/svgs/sun.svg" />
 
   </head>
 
