--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
+
 <!doctype html>
+
 <html lang="en">
+
   <head>
+
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="preload" as="image" href="/favicon.png" />
+    <link rel="preload" as="image" href="/favicon.svg" />
+
+
+    <title></title>
+
   </head>
+
   <body>
+
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+
   </body>
+
 </html>
