--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="preload" as="image" href="/favicon.png" />
     <link rel="preload" as="image" href="/favicon.svg" />
+    <link rel="preload" as="image" href="/assets/img/banner.jpg" />
 
 
     <title></title>
