--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <link rel="preload" as="image" href="/assets/svgs/ellipsis.svg" />
     <link rel="preload" as="image" href="/assets/svgs/moon.svg" />
     <link rel="preload" as="image" href="/assets/svgs/sun.svg" />
+    <link rel="preload" as="image" href="/assets/svgs/wifi_on.svg" />
+    <link rel="preload" as="image" href="/assets/svgs/wifi_off.svg" />
 
   </head>
 
