--- a/src/mini_window/index.html
+++ b/src/mini_window/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Mise à jour</title>
+
   <style>
     @font-face {
       font-family: 'Roboto';
@@ -13,13 +16,14 @@
     }
 
     body {
+      display: flex;
+      align-items: center;
       width: 300px;
       height: 400px;
       margin: 0;
       padding: 0;
       overflow: hidden;
       display: flex;
-      justify-content: center;
       align-items: center;
       flex-direction: column;
       font-family: 'Roboto', sans-serif;
@@ -29,7 +33,8 @@
 
     h1 {
       font-size: 20px;
-      margin-top: -40%;
+      margin-bottom: -10%;
+      margin-top: 2rem;
       text-align: center;
     }
 
@@ -63,16 +68,21 @@
 
 
   </style>
+
 </head>
 
 <body>
-  <h1>Vérification des mises à jour...</h1>
+
+  <h1>Recherche de mises à jour...</h1>
+
   <div class="loading-wave">
     <div class="loading-bar"></div>
     <div class="loading-bar"></div>
     <div class="loading-bar"></div>
     <div class="loading-bar"></div>
   </div>
+
+  <img style="width: 120px; margin-top: 1.25rem;" src="../dist/favicon.svg" alt="">
 
 <script>
   window.addEventListener('DOMContentLoaded', () => {
