--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="preload" as="image" href="/favicon.png" />
     <link rel="preload" as="image" href="/favicon.svg" />
-    <link rel="preload" as="image" href="/assets/img/banner.jpg" />
+    <link rel="preload" as="image" href="/assets/img/baner-hero.jpg" />
+
+    <link rel="preload" as="image" href="/assets/img/phone_view_home_light.png" />
+    <link rel="preload" as="image" href="/assets/img/phone_view_edit_light.png" />
+    <link rel="preload" as="image" href="/assets/img/phone_view_home_dark.png" />
+    <link rel="preload" as="image" href="/assets/img/phone_view_edit_dark.png" />
 
 
     <title></title>
 
   </head>
 
-  <body>
+  <body class="selection:bg-yellow-200 selection:text-gray-800">
 
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
