--- a/index.html
+++ b/index.html
@@ -54,6 +54,32 @@
 
   </head>
 
+  <style>
+
+    * {
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+    }
+
+    *::-webkit-scrollbar {
+      display: none;
+    }
+
+    body {
+      background-color: var(--bg);
+      color: var(--text);
+      overflow-x: hidden;
+      font-family: 'Inter', sans-serif;
+      transition: background-color 900ms;
+    }
+
+    #app {
+      min-width: 420px;
+      min-height: 500px;
+    }
+
+  </style>
+
 
   <!-- body managed by vite/vue -->
 
@@ -63,9 +89,7 @@
       <!-- web app front -->
     </div>
 
-    <script type="module" src="/src/main.ts">
-      
-    </script>
+    <script type="module" src="/src/main.ts"></script>
 
   </body>
 
