--- a/index.html
+++ b/index.html
@@ -82,10 +82,12 @@
         overflow-x: hidden;
         font-family: 'Inter', sans-serif;
         transition: background-color 900ms;
+        min-width: 370px;
+        min-height: 500px;
       }
 
       #app {
-        min-width: 420px;
+        min-width: 370px;
         min-height: 500px;
       }
 
