--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 
 <!doctype html>
 
-<html lang="en">
+<html lang="fr">
 
   <head>
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+   <!-- meta SEO -->
+    <meta name="keywords" content="silvernote" />
+    <meta name="description" content=" SilverNote est une application simple de prise de notes, compatible avec les appareils mobiles, les ordinateurs et le web. " />
+    <meta name="language" content="fr" />
+    <meta name="geo.region" content="FR" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="rating" content="general" />
+    <meta name="format-detection" content="telephone=no" />
+
+
+    <!-- meta open graph -->
+    <meta property="og:title" content="" /> <!-- rempli par vue-router -->
+    <meta property="og:description" content=" SilverNote est une application simple de prise de notes, compatible avec les appareils mobiles, les ordinateurs et le web. " />
+    <meta property="og:image" content="https://app.silvernote.fr/favicon.png" />
+    <meta property="og:site_name" content="SilverNote" /> 
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://app.silvernote.fr/" /> 
+
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
@@ -18,7 +38,6 @@
     <link rel="preload" as="image" href="/assets/img/phone_view_edit_light.png" />
     <link rel="preload" as="image" href="/assets/img/phone_view_home_dark.png" />
     <link rel="preload" as="image" href="/assets/img/phone_view_edit_dark.png" />
-
 
     <title></title>
 
