--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <script>
 
       const handleClose = (event) => {
-        fetch('http://localhost:3000/user/session/close', {
+        fetch('https://api.silvernote.fr/user/session/close', {
           method: 'POST',
           credentials: "include"
         });
