--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#F28C28">
 
    <!-- meta SEO -->
     <meta name="keywords" content="silvernote" />
@@ -19,13 +20,13 @@
 
 
     <!-- meta open graph -->
-    <meta property="og:title" content="" /> <!-- rempli par vue-router -->
+    <meta property="og:title" content="Silvernote" />
     <meta property="og:description" content=" SilverNote est une application simple de prise de notes, compatible avec les appareils mobiles, les ordinateurs et le web. " />
-    <meta property="og:image" content="https://app.silvernote.fr/favicon.png" />
+    <meta property="og:image" content="https://www.silvernote.fr/favicon.png" />
     <meta property="og:site_name" content="SilverNote" /> 
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://app.silvernote.fr/" /> 
+    <meta property="og:url" content="https://www.silvernote.fr/" /> 
 
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
