--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <meta property="og:url" content="https://app.silvernote.fr/" /> 
 
 
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg" href="/favicon.svg" />
 
     <!-- preload -->
     <link rel="preload" as="image" href="/assets/webp/pin_plein.webp" />
